2010-04-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/src/gsad.xsl: Changed URL for about page.

	* src/html/src/help.xsl: Added content of pages "about" and "gplv2".

	* src/html/src/about.htm4, src/html/src/gplv2.htm4: Removed.

2010-04-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Static help files are not necessary anymore.

	* src/html/make_html: Don't create directory "help".

	* src/html/src/help/view_report.htm4,
	src/html/src/help/scanconfig_nvt_details.htm4,
	src/html/src/help/scanconfig_editor_nvt.htm4,
	src/html/src/help/configure_targets.htm4,
	src/html/src/help/new_task.htm4,
	src/html/src/help/scanconfig_details.htm4,
	src/html/src/help/scanconfig_editor_nvt_families.htm4,
	src/html/src/help/scanconfig_editor.htm4,
	src/html/src/help/error_messages.htm4,
	src/html/src/help/scanconfig_family_details.htm4,
	src/html/src/help/configure_agents.htm4,
	src/html/src/help/tasks.htm4,
	src/html/src/help/notes.htm4,
	src/html/src/help/nvts.htm4,
	src/html/src/help/contents.htm4,
	src/html/src/help/reports.htm4,
	src/html/src/help/configure_scanconfigs.htm4,
	src/html/src/help/configure_credentials.htm4,
	src/html/src/help/feed_management.htm4,
	src/html/src/help/settings.htm4,
	src/html/src/help/performance.htm4,
	src/html/src/help/configure_escalators.htm4,
	src/html/src/help/configure_users.htm4,
	src/html/src/help/glossary.htm4, src/html/src/help/: Removed.

2010-04-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Patch contributed by Mareike Piechowiak <noplant@gmx.de>.

	This moves all help page content to XSL and thus allows
	to have user name and date in the header (which was not
	possible with the static files).

	* src/gsad.c (request_handler): Added handling of any URL
	with "/help/".

	* src/html/src/help.xsl: New. Contains all help texts
	of the .htm4 files.

	* src/html/src/gsad.xsl: Added inclusion of help.xsl.

2010-04-10 Stephan Kleine
