@@ -1,17 +1,0 @@
-
-    </div>
-   </div>
-
-  </td>
- </tr>
-</table>
-
-<div class="gsa_footer">
-Greenbone Security Assistant (GSA) Copyright 2009 by Greenbone Networks 
-GmbH, <a href="http://www.greenbone.net">www.greenbone.net</a>
-</div>
-
-   </div>
-  </center>
- </body>
-</html>
