@@ -1,83 +1,0 @@
-m4_define(`GSAD_HTML_ICON_EDIT', `<img src="/img/edit.png" alt="Edit" title="Edit" />')
-m4_define(`GSAD_HTML_ICON_DETAILS', `<img src="/img/details.png" alt="Details" title="Details" />')
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
- <head>
-  <link rel="stylesheet" type="text/css" href="/gsa-style.css" />
-  <link rel="icon" href="/favicon.gif" type="image/x-icon" />
-  <title>PAGE_TITLE</title>
- </head>
- <body>
-  <center>
-   <div class="envelope">
-
-<div style="text-align:left;">
- <div class="logo_l">
-  <a href="/omp?cmd=get_status">
-   <img src="/img/style/logo_l.png" alt="" />
-  </a>
- </div>
- <div class="logo_r"></div>
- <div class="logo_m">
-  <div class="logout_panel">
-  <!-- Logged in as <b>(not available)</b> |--> <a href="/logout.html" title="Logout" style="margin-left:3px;">Logout</a>
-  </div>
- </div>
-</div>
-<br clear="all" />
-
-<table width="100%" cellpadding="3" cellspacing="0">
- <tr>
-  <td valign="top" width="1">
-   <div class="gb_window" style="width:170px;">
-    <div class="gb_window_part_left"></div>
-    <div class="gb_window_part_right"></div>
-    <div class="gb_window_part_center">Navigation</div>
-    <div class="gb_window_part_content_no_pad">
-    <div id="nav">
-     <ul>
-      <li>Scan Management
-      <ul>
-       <li><a href="/omp?cmd=get_status">Tasks</a></li>
-       <li><a href="/new_task.html">New Task</a></li>
-       <li><a href="/omp?cmd=get_notes">Notes</a></li>
-       <li><a href="/omp?cmd=get_system_reports">Performance</a></li>
-      </ul>
-      </li>
-      <li>Configuration
-      <ul>
-       <li><a href="/omp?cmd=get_configs">Scan Configs</a></li>
-       <li><a href="/omp?cmd=get_targets">Targets</a></li>
-       <li><a href="/omp?cmd=get_lsc_credentials">Credentials</a></li>
-       <li><a href="/omp?cmd=get_agents">Agents</a></li>
-       <li><a href="/omp?cmd=get_escalators">Escalators</a></li>
-       <li><a href="/omp?cmd=get_schedules">Schedules</a></li>
-      </ul>
-      </li>
-      <li>Administration
-      <ul>
-        <li><a href="/omp?cmd=get_users">Users</a></li>
-        <li><a href="/omp?cmd=get_feed">NVT Feed</a></li>
-        <li><a href="/omp?cmd=get_settings">Settings</a></li>
-      </ul>
-      </li>
-      <li>Help
-       <ul>
-        <li><a href="/help/contents.html">Contents</a></li>
-        <li><a href="/about.html">About</a></li>
-       </ul>
-      </li>
-     </ul>
-    </div>
-    </div>
-  </div>
-  </td>
-  <td valign="top">
-   <div class="gb_window">
-    <div class="gb_window_part_left"></div>
-    <div class="gb_window_part_right"></div>
-    <div class="gb_window_part_center">PAGE_TITLE</div>
-    <div class="gb_window_part_content">
-
